Move bar graph into a dedicated component

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>SettingsPage.qml</file>
+        <file>graphs/BarGraph.qml</file>
     </qresource>
 </RCC>
