--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,7 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>SettingsPage.qml</file>
+        <file>settings/RootSettingsPage.qml</file>
+        <file>settings/LoggerSettingsPage.qml</file>
+        <file>settings/UiSettingsPage.qml</file>
         <file>graphs/BarGraph.qml</file>
         <file>graphs/HrGraph.qml</file>
     </qresource>
