Make the main preview page more modular this splits off the graphs for different sensors into separate files which should make maintenance a bit easier

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,6 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>stepCounter/StepCounterPreview.qml</file>
+        <file>heartrate/HeartratePreview.qml</file>
         <file>settings/RootSettingsPage.qml</file>
         <file>settings/LoggerSettingsPage.qml</file>
         <file>settings/UiSettingsPage.qml</file>
