Add weight graph and preview The weight data collection is manual, so we need a page for the user to input data, hence this commit isn't sufficient for a weight logging implementation on its own. Weight doesn't have a dataChanged signal in sensorlogd, so that's currently not implemented here either Because weight tracking isn't for everyone, the preview isn't shown by default.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -5,6 +5,7 @@
         <file>stepCounter/StepsDetailPage.qml</file>
         <file>heartrate/HeartratePreview.qml</file>
         <file>heartrate/HeartrateDetailPage.qml</file>
+        <file>weight/WeightPreview.qml</file>
         <file>settings/RootSettingsPage.qml</file>
         <file>settings/LoggerSettingsPage.qml</file>
         <file>settings/UiSettingsPage.qml</file>
@@ -13,5 +14,6 @@
         <file>graphs/StepsLineGraph.qml</file>
         <file>graphs/TimeLabels.qml</file>
         <file>graphs/VerticalLabels.qml</file>
+        <file>graphs/WeightGraph.qml</file>
     </qresource>
 </RCC>
