Rewrite the labelling system The label code has been split into its own set of components: -TimeLabels: These try to display time labels as best as possible. They can label intervals from a minute to a day, but the code for labelling weeks is still missing. There's also no code protecting against strings overlapping with each other. - VerticalLabels: The code for these is a bit more 'analogue' than that of the time labels, but it's roughly analogous to previous code.
These have also been implemented for the heartrate graph.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -8,5 +8,7 @@
         <file>settings/UiSettingsPage.qml</file>
         <file>graphs/BarGraph.qml</file>
         <file>graphs/HrGraph.qml</file>
+        <file>graphs/TimeLabels.qml</file>
+        <file>graphs/VerticalLabels.qml</file>
     </qresource>
 </RCC>
