Add heartrate detail page This currently just allows viewing heartrate over a day, a week or 3 weeks

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -3,6 +3,7 @@
         <file>main.qml</file>
         <file>stepCounter/StepCounterPreview.qml</file>
         <file>heartrate/HeartratePreview.qml</file>
+        <file>heartrate/HeartrateDetailPage.qml</file>
         <file>settings/RootSettingsPage.qml</file>
         <file>settings/LoggerSettingsPage.qml</file>
         <file>settings/UiSettingsPage.qml</file>
