Add steps detail page Currently this is a direct clone of the heartrate detail page, and isn't specialised for steps in any way

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>stepCounter/StepCounterPreview.qml</file>
+        <file>stepCounter/StepsDetailPage.qml</file>
         <file>heartrate/HeartratePreview.qml</file>
         <file>heartrate/HeartrateDetailPage.qml</file>
         <file>settings/RootSettingsPage.qml</file>
@@ -9,6 +10,7 @@
         <file>settings/UiSettingsPage.qml</file>
         <file>graphs/BarGraph.qml</file>
         <file>graphs/HrGraph.qml</file>
+        <file>graphs/StepsLineGraph.qml</file>
         <file>graphs/TimeLabels.qml</file>
         <file>graphs/VerticalLabels.qml</file>
     </qresource>
